--- a/19062020/style.css
+++ b/19062020/style.css
@@ -287,3 +287,9 @@ html {
       transform: rotate(45deg);
     }
 
+    .logo {
+      height: 200px;
+      width: 200px;
+      border-radius: 60px;
+      background: radial-gradient(circle at 30% 107%, );
+    }
